# airbnb-safety-tools

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  go.mod  go.sum  install.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
cmd/safestay/: main.go
internal/fingerprint/: fingerprint.go  fingerprint_test.go
internal/guide/: guide.go
internal/model/: device.go  device_test.go  ports.go
internal/network/: arp.go  discovery.go  discovery_test.go  subnet.go
internal/oui/: fallback.go  oui.go
internal/report/: report.go  report_test.go
internal/scan/: portscan.go
internal/tui/: app.go  app_test.go  detail.go  detail_test.go  guide_view.go  keys.go  layout.go  messages.go  styles.go  table.go  table_test.go
scanner/: __main__.py  app.py  app.tcss  fingerprint.py  models.py  network.py  oui_database.py  ports.py
scanner/widgets/: detail_panel.py  device_table.py
