[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safestay-scanner"
version = "0.1.0"
description = "Network scanner to detect hidden cameras and suspicious devices at Airbnbs"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.85.0",
    "python-nmap>=0.7.1",
    "scapy>=2.5.0",
    "mac-vendor-lookup>=0.1.12",
]

[project.scripts]
safestay = "scanner.__main__:main"
